# hermes-dashboard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/hermes_dashboard/: __init__.py  cli.py  server.py
src/hermes_dashboard/static/: index.html
tests/: test_server.py
