[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-dashboard"
version = "0.1.0"
description = "A sleek local web dashboard for monitoring Hermes Agent — sessions, cron jobs, skills, token usage, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Iain Finkbeiner" },
]
keywords = ["hermes", "agent", "dashboard", "monitoring", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/iainfink/hermes-dashboard"
Repository = "https://github.com/iainfink/hermes-dashboard"
Issues = "https://github.com/iainfink/hermes-dashboard/issues"

[project.scripts]
hermes-dashboard = "hermes_dashboard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_dashboard"]

[tool.hatch.build.targets.sdist]
include = ["src/hermes_dashboard/**", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
